# MicroHs

./: Blinky.hs  CMakeLists.txt
boards/ArduinoUno/: Blinky.hs  README.md
boards/raspberry-pico/: .gitignore  CMakeLists.txt  Makefile  README.md
boards/raspberry-pico/src/: Blinky.hs  BlinkyBtn.hs
src/runtime/: blinky_compress.c  config-arduinouno.h  config-raspberry-pico.h  eval-arduinouno.c  eval-raspberry-pico.c  lz77.c  main.c  mhsffi.h
